practice-exam-tracker-sfdx/ooo-app/main/default/objects/Note__c/Note__c.object-meta.xml
<CustomObject>
    <label>Note</label>
    <nameField>
        <displayFormat>Note #{YY}{MM}-{0000}</displayFormat>
        <label>Note Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>