practice-exam-tracker-sfdx/ooo-app/main/default/objects/Note__c/fields/Note_Type__c.field-meta.xml
<CustomField>
    <fullName>Note_Type__c</fullName>
    <label>Note Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technical</fullName>
                <default>true</default>
                <label>Technical</label>
            </value>
            <value>
                <fullName>Verbal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>