practice-exam-tracker-sfdx/ooo-app/main/default/objects/Note__c/fields/Points_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Points_Achieved__c</fullName>
    <label>Points Achieved</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>