practice-exam-tracker-sfdx/ooo-app/main/default/objects/Note__c/validationRules/Points_Achieved.validationRule-meta.xml
<ValidationRule>
    <fullName>Points_Achieved</fullName>
    <active>true</active>
    <errorConditionFormula>IF( NOT( ISBLANK( Question__c ) ), Points_Achieved__c &gt; Question__r.Point_Value__c, false)</errorConditionFormula>
    <errorDisplayField>Points_Achieved__c</errorDisplayField>
    <errorMessage>You cannot award more points than possible for this question.</errorMessage>
</ValidationRule>